[package]
name = "shekozwallet"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = { version = "1.0" }
tokio = { version = "1.0", features = ["full"] }
inquire = { version = "0.5" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
tracing = { version = "0.1", features = ["attributes"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

url = { version = "2.3", default-features = false, features = ["serde"] }
ethers = { version = "1", default-features = false, features = ["rustls", "abigen"] }
reqwest = { version = "0.11", default-features = false, features = ["json"] }
hex = { version = "0.4.3", default-features = false, features = ["std"] }

v4l = "0.13"
qrcode = "0.12"
image = "0.23"
rqrr = "0.4"
viuer = "0.5"


[profile.release]
lto = true
codegen-units = 1
