[package]
name = "shekozwallet"
version = "0.1.0-rc.2"
edition = "2021"
publish = false

[dependencies]
color-eyre = { version = "0.6" }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
url = { version = "2.3", default-features = false, features = ["serde"] }
ethers = { version = "1", default-features = false, features = ["rustls", "abigen"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "socks", "rustls-tls"] }
hex = { version = "0.4.3", default-features = false, features = ["std"] }
console = "0.15"
inquire = { version = "0.5", default-features = false, features = ["console"] }
v4l = "0.13"
qrcode = { version = "0.12", default-features = false }
image = "0.24"
rqrr = "0.5"
viuer = "0.6"
indicatif = "0.17"
coins-bip32 = "0.7"

[dependencies.ur-registry]
git = "https://github.com/shekohex/ur-registry-rust.git"
rev = "0151303"
version = "0.1.0"

[dependencies.ur]
git = "https://github.com/KeystoneHQ/ur-rs.git"
rev = "5f673a1"
version = "0.2.0"


[profile.release]
lto = true
codegen-units = 1
